# cpp_labs

./: README.md
LW 2( bit realise)/: README.md
LW 2( bit realise)/lib/: number.cpp  number.h
LW 4/: README.md
LW 4/lib/: ArgParser.cpp
LW 5/: CMakeLists.txt
LW 5/lib/: Array_3D.cpp  Array_3D.h  CMakeLists.txt
LW 5/tests/: CMakeLists.txt  test.cpp
LW1/: CMakeLists.txt  PrintFile.cpp  PrintFile.h  main.cpp  tmp.cpp
LW3/: CMakeLists.txt
LW3/lib/: CMakeLists.txt
LW3/lib/sand_pile_sim/: CMakeLists.txt  SandPile.cpp  Sandpile.h
LW3/lib/work_with_comm_args/: ArgParsing.cpp  ArgParsing.h  CMakeLists.txt
LW3/lib/work_with_input_resources/: CMakeLists.txt  WorkWithInput.cpp
LW3/lib/work_with_output_bmp/: BMP_Output.cpp  BMP_Output.h  CMakeLists.txt
LW3/resources/input/: test.tsv
lib/: ArgParser.h
tests/: argparser_test.cpp
